--- a/files/scratch.html
+++ b/files/scratch.html
@@ -1,65 +1,27 @@
-## Design
-
-### Palette
-
-### Whites
-
-**#ffffff**
-
-<div style="background-color: #ffffff; width: 40px; height: 40px; border-radius: 4px; margin-bottom: 8px;"></div>
-
-**#fafafa**
-
-<div style="background-color: #fafafa; width: 40px; height: 40px; border-radius: 4px; margin-bottom: 8px;"></div>
-
-### Blacks
-
-**#2a2a2a**
-
-<div style="background-color: #2a2a2a; width: 40px; height: 40px; border-radius: 4px; margin-bottom: 8px;"></div>
-
-
-**#111111**
-
-<div style="background-color: #111111; width: 40px; height: 40px; border-radius: 4px; margin-bottom: 8px;"></div>
-
-
-<style>
-  .palette-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 16px;
-    border-radius: 4px;
-    color: #fff;
-  }
-</style>
-
-<div style="display:flex; column-gap: 8px;">
-  <div class="palette-card" style="background-color: #fd8f47;">
-    #fd8f47
-  </div>
-  <div class="palette-card" style="background-color: #fd7014;">
-    #fd7014
-  </div>
-  <div class="palette-card" style="background-color: #dc5802;">
-    #dc5802
-  </div>
-
-  <div class="palette-card" style="background-color: #fcfcfa; color: black">
-    #fcfcfa
-  </div>
-
-  <div class="palette-card" style="background-color: #f9f9f8; color: black">
-    #f1f1f1
-  </div>
-  <div class="palette-card" style="background-color: #4e4e4e;">
-    #4e4e4e
-  </div>
-
-  <div class="palette-card" style="background-color: #2a2a2a;">
-    #2a2a2a
-  </div>
-</div>
+  <details class="minimal border-b border-gray-100 last:border-b-0">
+    <summary class="flex gap-x-2 w-full">
+      <div class="grid items-center w-full lg:gap-4 gap-8 p-3 grid-cols-[1fr_3fr_1fr]">
+        <div class="min-w-max text-medium">25 Apr 2025</div>
+        <div class="grid gap-2 lg:grid-cols-[max-content_1fr_10ch]">
+          <div class="flex flex-col gap-1">
+            <div class="text-sm text-gray-500">Max THC:</div><span class="text-medium text-black">23.0%</span>
+          </div>
+          <div class="flex flex-col gap-1 lg:w-max lg:justify-self-center justify-self-start">
+            <div class="text-sm text-gray-500">Issued by:</div><span class="text-medium text-black">Lucas
+              Barretto</span>
+          </div>
+          <div class="flex flex-col gap-1">
+            <div class="text-sm text-gray-500">Expires on:</div><span class="text-medium text-black">23 May 2025</span>
+          </div>
+        </div>
+        <div class="text-sm text-gray-500 text-right"><span
+            class="badge badge-green text-medium text-black">active</span></div>
+      </div>
+    </Summary>
+    <ul>
+      <li class="grid grid-cols-2 gap-4 w-full p-2 border-t border-gray-100">
+        <div class="text-sm text-gray-500">Formulation: <span class="text-medium text-black">Flowers</span> </div>
+        <div class="text-sm text-gray-500">Max allowance: <span class="text-medium text-black">50.0g</span> </div>
+      </li>
+    </ul>
+  </details
